services/k8s/kubernetes-dashboard/deployment.yml
---
# Kubernetes Dashboard Deployment
# This file is for reference - the dashboard is deployed via Ansible
# See: services/vms/k3s/deploy-dashboard.yml

apiVersion: v1
kind: Namespace
metadata:
  name: kubernetes-dashboard

---
# Note: The main dashboard installation is done via Ansible
# This ensures proper LoadBalancer configuration with MetalLB
#
# To deploy manually:
# kubectl apply -f https://raw.githubusercontent.com/kubernetes/dashboard/v3.0.0-alpha0/charts/kubernetes-dashboard.yaml
# kubectl -n kubernetes-dashboard patch svc kubernetes-dashboard-web -p '{"spec":{"type":"LoadBalancer"}}'
#
# To get access token:
# kubectl -n kubernetes-dashboard create token admin-user
